--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 header {
   text-align: center;
-  padding: 2rem;
+  margin-bottom: 3rem;
 }
 .main  {
   width: 90%;
@@ -28,10 +28,16 @@ padding-right: 5rem;
 .game-board {
   width: 500px;
   height: 500px;
+}
+
+.board-squares {
+  width: 500px;
+  height: 500px;
   display: grid;
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: repeat(3,1fr);
 }
+
 .square {
   padding: 1rem;
   display: flex;
@@ -102,6 +108,47 @@ a {
     width:100%;
   }
 
+  input[type='text'] {
+    border: none;
+    font-size: 1.5rem;
+    padding: 0.2rem 0.6rem;
+    margin-top: 0.5rem;
+    border-radius: 5px;
+    color: black;
+    border: black solid;
+  }
+
+  .game-settings-none {
+    display: none;
+  }
+  .game-settings-active {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .ai-mode {
+    display: none;
+  }
+  .ai-active {
+    display: block;
+  }
+
+  .outcome-display  {
+    display: none;
+    position: absolute;
+    text-align: center;
+    top: 350px;
+    border-radius: 20px;
+    border: solid;
+    font-size: 2rem;
+    height: auto;
+    background-color: tomato;
+    width: 400px;
+    margin-left: 4rem;
+  }
 
   /*for O color: #cd3d64;
   for X     color: #596ada; */
