--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+html {
+  height: 100%;
+}
+
 body {
   background: #fefbef;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
+
 header {
   text-align: center;
 }
-.main  {
+
+.container  {
+  display: flex;
   align-items: center;
   width: 95%;
   margin: 0 auto;
-  display: flex;
   flex-direction: column;
+  height: 95%;
 }
 
 .players {
@@ -28,14 +36,14 @@ main .game-board {
 }
 
 .game-board {
-  width: 350px;
-  height: 350px;
-  margin-bottom: 3rem;
+  width: 100%;
+  height: 55%;
+  margin-bottom: 2rem;
 }
 
 .board-squares {
-  width: 350px;
-  height: 350px;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: repeat(3,1fr);
@@ -87,6 +95,8 @@ main .game-board {
   font-size: 1.5rem;
   display: flex;
   flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
 }
 .controls div {
   margin: 1em 0;
@@ -157,10 +167,9 @@ a {
     font-size: 1rem;
     border-radius: 0.75rem;
     height: 2.5rem;
-    width: 7rem;
+    width: 30%;
     font-weight: 600;
     line-height: 1;
-    margin-bottom: 1.5rem;
   }
 
   .start-game {
@@ -171,7 +180,6 @@ a {
     color: #fefbef;
     font-weight: 600;
     line-height: 1;
-    margin-bottom: 1.5rem;
   }
   .reset-game {
     font-size: 1rem;
@@ -181,7 +189,6 @@ a {
     color: #fefbef;
     font-weight: 600;
     line-height: 1;
-    margin-bottom: 1.5rem;
   }
   .settings {
     font-size: 1rem;
@@ -201,54 +208,21 @@ a {
 
 /* // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap */
-@media only screen 
-    and (device-width : 375px) 
-    and (device-height : 812px) 
-    and (-webkit-device-pixel-ratio : 3)
-and (orientation : portrait) { 
-  .players {
-    margin-bottom: 5rem;
-  }
-  .game-board {
-    width: 350px;
-    height: 350px;
-    margin-bottom: 9rem;
-}
-}
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 414px) {
-  .game-board {
-    margin-bottom: 8rem;
+@media (min-width: 576px) { 
+  
 }
 
-}
-@media (min-width: 576px) {
 
-}
-
-/* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
-  .players {
-    justify-content: space-around;
-    margin-bottom: 5rem;
-  }
-  .game-board {
-    width: 450px;
-    height: 450px;
-    margin-bottom: 9rem;
-  }
-  .board-squares {
-    width: 450px;
-    height: 450px;
-  }
+  
 }
 
-/* Large devices (desktops, 992px and up) */
+
 @media (min-width: 992px) { 
-
+  
 }
 
-/* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
 
+@media (min-width: 1200px) { 
+  
 }
